[package]
name = "lazy_conf"
version = "0.1.1"
edition = "2018"
authors = ["storyfeet <thebeaky@psmail.net>"]
description = "A quick unified way to grab configuration options from * environment variables * program arguments * config files."
keywords = ["conf","config","lazy","simple","lazyf"]
license = "MIT"

[[bin]]
name="lz_tools"
path="src/tools.rs"

[lib]
name="lazy_conf"
path="src/lib.rs"

[dependencies]
clap = "2.33.0"
